@@ -164,7 +164,6 @@ public class TestArrayUtil extends LuceneTestCase {
 
   // This is a test for LUCENE-3054 (which fails without the merge sort fall back with stack
   // overflow in most cases)
-  @Slow
   public void testQuickToHeapSortFallback() {
     int num = atLeast(10);
     for (int i = 0; i < num; i++) {
